@@ -6,6 +6,8 @@ Bug fixes:
 * Backported fix to issue 175 (reaching HWM on XREP sockets could cause
   a crash) (Ilja Golshtein)
 
+* Fix to C++ binding to properly close sockets (Guido Goldstein).
+
 
 0MQ version 2.0.10 (Stable), released on 2010/10/15
 ===================================================
